--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  # The following adds the Barcode Scanner package to your application.
+  # Use with the right permissions to enable QR code scanning on both iOS and Android.
+  barcode_scan: ^0.0.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
