--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: octoscan
-description: A new Flutter project.
+name: Octoscan
+description: QR Scanning app for Kasteel Huys ter Hof.
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,10 +19,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-
-  # The following adds the Barcode Scanner package to your application.
-  # Use with the right permissions to enable QR code scanning on both iOS and Android.
-  barcode_scan: ^0.0.3
+  qr_mobile_vision: ^0.1.0
 
 dev_dependencies:
   flutter_test:
