--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,30 @@
-.DS_Store
+# Dart
 .dart_tool/
 
+# Dependencies
 .packages
 .pub/
+.flutter-plugins
 
+# Build
 build/
 
-.flutter-plugins
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# System Files
+.DS_Store
+Thumbs.db
