--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  qr_mobile_vision: ^0.1.0
+  barcode_scan: ^0.0.3
   carousel_pro: ^0.0.13
 
 
