--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   flutter_svg: ^0.6.1+1
   flutter_markdown: ^0.2.0
   cloud_firestore: ^0.8.0
-
+  url_launcher: ^4.0.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
