--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,10 @@ description: QR Scanning app for Kasteel Huys ter Horst.
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
 # Read more about versioning at semver.org.
-version: 1.1.1+4
+version: 1.1.2+5
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
