--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=HuysTerHorstQR1!
 keyPassword=HuysTerHorstQR1!
 keyAlias=key
-storeFile=C:/Users/gc/stack/huysterhorst/key.jks
+storeFile=/home/gilles/sdk/key.jks
