--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ description: QR Scanning app for Kasteel Huys ter Horst.
 # Both the version and the builder number may be overridden in flutter
 # build by specifying --build-name and --build-number, respectively.
 # Read more about versioning at semver.org.
-version: 1.1.2+5
+version: 1.1.3+6
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -47,7 +47,7 @@ flutter:
   #  - images/a_dot_ham.jpeg
 
   assets:
-    - lib/assets/icon.svg
+    - lib/assets/background.png
     - lib/assets/qr-code.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
