--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ flutter:
   #  - images/a_dot_ham.jpeg
 
   assets:
-    - lib/assets/background.png
+    - lib/assets/background.jpg
     - lib/assets/qr-code.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
