--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,14 +20,20 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   barcode_scan: ^0.0.3
   carousel_pro: ^0.0.13
-  flutter_svg: ^0.6.1+1
+  flutter_svg: ^0.12.3
   flutter_markdown: ^0.2.0
   cloud_firestore: ^0.8.0
   url_launcher: ^4.0.3
-  
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.0
+
+flutter_icons:
+  android: "launcher_icon" 
+  ios: true
+  image_path: "lib/assets/icon.png"
 
 
 # For information on the generic Dart part of this file, see the
