--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>251107191570-omcoa3t4jnpfr6pq8vlmh5tao82tlac3.apps.googleusercontent.com</string>
+	<string>251107191570-14m9bh19spia4oqlmdbk2pl4qhqpril2.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.251107191570-omcoa3t4jnpfr6pq8vlmh5tao82tlac3</string>
+	<string>com.googleusercontent.apps.251107191570-14m9bh19spia4oqlmdbk2pl4qhqpril2</string>
 	<key>API_KEY</key>
 	<string>AIzaSyCysdPlHaSa0ZMjdNhWn_Lkyby6GSr2ZVE</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>nl.kasteelhuysterhorst.KasteelHuysTerHorst</string>
+	<string>nl.kasteelhuysterhorst.qr</string>
 	<key>PROJECT_ID</key>
 	<string>kasteelapp</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,7 +29,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:251107191570:ios:8913e08e944676a2</string>
+	<string>1:251107191570:ios:ff2e704e97833c01</string>
 	<key>DATABASE_URL</key>
 	<string>https://kasteelapp.firebaseio.com</string>
 </dict>
